Joining two Grease Pencil objects sometimes crashes, sometimes fails silently. #60031

Closed
opened 2019-01-01 09:34:27 +01:00 by warp zone · 7 comments

System Information
Operating system: Windows 7 Home Premium Service Pack 1
Graphics card: AMD Radeon R9 200 series

Blender Version
Broken:
(example: 2.80, e5e885d0ec, blender2.7, 2018-12-23, as found on the splash screen)

Short description of error
Joining two Grease Pencil objects sometimes crashes, sometimes fails silently.

Exact steps for others to reproduce the error

  • Create a new scene with Animation 2D settings as the default.
  • Make a Grease Pencil object.
  • Select it and go into Draw mode.
  • Draw very many strokes using multiple materials.
  • Select some of the strokes using shit+left click while "select all stroke points"is enabled.
  • Strokes > Seperate > Selected strokes
  • Switch to Object mode
  • In the Scene Collection, select the new Grease Pencil object, then shift+select the old Grease Pencil Object.
  • Object > Join

Sometimes it works, sometimes it doesn't. As long as your scene was saved correctly it seems like you can just keep trying the Join command over and over again until you get lucky and it works.

**System Information** Operating system: Windows 7 Home Premium Service Pack 1 Graphics card: AMD Radeon R9 200 series **Blender Version** Broken: (example: 2.80, e5e885d0ecb9, blender2.7, 2018-12-23, as found on the splash screen) **Short description of error** Joining two Grease Pencil objects sometimes crashes, sometimes fails silently. **Exact steps for others to reproduce the error** - Create a new scene with Animation 2D settings as the default. - Make a Grease Pencil object. - Select it and go into Draw mode. - Draw very many strokes using multiple materials. - Select some of the strokes using shit+left click while "select all stroke points"is enabled. - Strokes > Seperate > Selected strokes - Switch to Object mode - In the Scene Collection, select the new Grease Pencil object, then shift+select the old Grease Pencil Object. - Object > Join Sometimes it works, sometimes it doesn't. As long as your scene was saved correctly it seems like you can just keep trying the Join command over and over again until you get lucky and it works.
Author

Added subscriber: @WarpZone

Added subscriber: @WarpZone

Added subscriber: @ZedDB

Added subscriber: @ZedDB

You blender version is very old. See if the problem still exists with a new build from https://builder.blender.org/download/

You blender version is very old. See if the problem still exists with a new build from https://builder.blender.org/download/

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Antonio Vazquez was assigned by Dalai Felinto 2019-01-02 15:04:53 +01:00

Confirmed with c862c14339 (blender2.8 HEAD).

File before the crash (just open it and Ctrl+J):
gp.blend

SUMMARY: AddressSanitizer: heap-buffer-overflow //source/blender/draw/engines/gpencil/gpencil_draw_utils.c:754 in gpencil_draw_strokes
Full ASAN report: P880

Confirmed with c862c14339e4 (blender2.8 HEAD). File before the crash (just open it and Ctrl+J): [gp.blend](https://archive.blender.org/developer/F6150953/gp.blend) `SUMMARY: AddressSanitizer: heap-buffer-overflow //source/blender/draw/engines/gpencil/gpencil_draw_utils.c:754 in gpencil_draw_strokes` Full ASAN report: [P880](https://archive.blender.org/developer/P880.txt)

This issue was referenced by 7765277240

This issue was referenced by 7765277240c8d54ac290cf35c08f7f7d046e4ae2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60031
No description provided.