Fix T60031: Joining two Grease Pencilobjects sometimes crashes

The drawing cache was not set as dirty and drawing engine used old data.